Se ajuste el nombre

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -845,6 +845,7 @@
 
     h4{
         font-family: $font_bold;
+        text-transform: uppercase;
         span{
             &:first-of-type,
             &:nth-of-type(2){
